--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
 <!doctype html>
-<html lang="en">
+<html lang="uz">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- App title -->
+    <title>ProggWave — Developer Startup Platform</title>
+
+    <!-- SEO -->
+    <meta
+      name="description"
+      content="ProggWave — dasturchilar, startup jamoalar va loyihalar uchun platforma. MVP versiya."
+    />
+    <meta name="author" content="ProggWave Team" />
+
+    <!-- Open Graph (Telegram, Facebook, LinkedIn) -->
+    <meta property="og:title" content="ProggWave — Developer Startup Platform" />
+    <meta
+      property="og:description"
+      content="Dasturchilar va startup jamoalarini birlashtiruvchi platforma."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="ProggWave" />
+    <meta
+      name="twitter:description"
+      content="Developerlar uchun startup platforma (MVP)."
+    />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
@@ -24,3 +38,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
